[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -1,2 +1,32 @@
 <html>
+    <head>
+        <title>
+            NAME
+            </title>
+        </head>
+        <body>
+            <div>
+                <a href="/">Home</a>
+                </div>
+                <hr/>
+                <h3>
+                    Peronal Information
+                </h3>
+                <div>
+                    MD Farhan Iqbal
+                </div>
+                <div>
+                    <p>
+                        I am in third year,persuing my engineering in electronics and communication from SRM University.
+                    </p>
+                    <p>
+                         My native city is Kolkata.I have been staying in hostel since past 10 years.
+                         My stengths lies in my adaptibilty,therefore my personal traits include hardworking,adaptive,listner.
+                    </p>
+                    <p>
+                        AGE:        21
+                        CONTACT NO: 9003225874
+                    </p>
+                </div>
+            </body>
 </html>
