[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -10,7 +10,7 @@
                 </div>
                 <hr/>
                 <h3>
-                    Peronal Information
+                    Personal Information
                 </h3>
                 <div>
                     MD Farhan Iqbal
