[imad-console] Updates ui/Hobby.html

--- a/ui/Hobby.html
+++ b/ui/Hobby.html
@@ -1,2 +1,33 @@
 <html>
+    <head>
+    <title>
+        HOBBY
+    </title>
+    </head>
+    <body>
+        <div>
+             <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Hobby
+        </h3>
+        <div>
+            Passion
+            </div>
+            <div>
+            <p>
+             I love playing outdoor games,which drives my passion and anger on the pitch.   
+              </p>
+              <p>
+                  Travelling,Music,Chatting,Self Imagining too forms my core hobbies.
+              </p>
+              <p>
+                  Love what you do, do what you love.
+              </p>
+              <p>
+                 But more importantly, Love yourself.
+              </p>
+        </div>
+    </body>
 </html>
