[imad-console] Updates ui/Rules-in-life.html

--- a/ui/Rules-in-life.html
+++ b/ui/Rules-in-life.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            RULES
+        </title>
+    </head>
+    <body>
+        <div>
+             <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Rules of life
+        </h3>
+        <div>
+            Rules are always not meant to be broken.
+        </div>
+        <div>
+            <p>
+                Fear has only two meanings
+            </p>
+            <p>
+                Forget everything and run,
+            </p>
+            <p>
+                Or face everything and rise.
+            </p>
+        </div>
+    </body>
 </html>
