[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -3,9 +3,17 @@
         <title>
             NAME
             </title>
+            <style>
+              .container{
+                  max-width:800px;
+                  margin: 0 auto;
+                  font-family:sans-sarif;
+              }  
+            </style>
         </head>
         <body>
-            <div>
+    <div class="container">
+               <div>
                 <a href="/">Home</a>
                 </div>
                 <hr/>
@@ -29,6 +37,7 @@
                         <p>
                         CONTACT NO: 9003225874
                     </p>
-                </div>
+                    </div>
+        </div>
             </body>
 </html>
