[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -5,9 +5,12 @@
             </title>
             <style>
               .container{
-                  max-width:800px;
-                  margin: 0 auto;
-                  font-family:sans-sarif;
+                   max-width: 800px;
+                    margin: 0 auto;
+                    font-family: sans-sarif;
+                    padding-top: 60px;
+                    padding-right: 150px;
+                    padding-left: 20px;
               }  
             </style>
         </head>
