--- a/ui/Rules-in-life.html
+++ b/ui/Rules-in-life.html
@@ -3,8 +3,19 @@
         <title>
             RULES
         </title>
+        <style>
+            .container{
+                   max-width: 800px;
+                    margin: 0 auto;
+                    font-family: sans-sarif;
+                    padding-top: 60px;
+                    padding-right: 150px;
+                    padding-left: 20px;
+              }  
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
              <a href="/">Home</a>
         </div>
@@ -25,6 +36,7 @@
             <p>
                 Or face everything and rise.
             </p>
+        </div>
         </div>
     </body>
 </html>
