--- a/ui/Hobby.html
+++ b/ui/Hobby.html
@@ -3,8 +3,19 @@
     <title>
         HOBBY
     </title>
+    <style>
+        .container{
+                   max-width: 800px;
+                    margin: 0 auto;
+                    font-family: sans-sarif;
+                    padding-top: 60px;
+                    padding-right: 150px;
+                    padding-left: 20px;
+              }  
+    </style>
     </head>
     <body>
+        <div class="container">
         <div>
              <a href="/">Home</a>
         </div>
@@ -28,6 +39,7 @@
               <p>
                  But more importantly, Love yourself.
               </p>
+        </div>
         </div>
     </body>
 </html>
