--- a/ui/Rules-in-life.html
+++ b/ui/Rules-in-life.html
@@ -4,7 +4,7 @@
             RULES
         </title>
         <style>
-            .container{
+            .container2{
                    max-width: 800px;
                     margin: 0 auto;
                     font-family: sans-sarif;
@@ -15,7 +15,7 @@
         </style>
     </head>
     <body>
-        <div class="container">
+        <div class="container2">
         <div>
              <a href="/">Home</a>
         </div>
