--- a/ui/Hobby.html
+++ b/ui/Hobby.html
@@ -4,7 +4,7 @@
         HOBBY
     </title>
     <style>
-        .container{
+        .container1{
                    max-width: 800px;
                     margin: 0 auto;
                     font-family: sans-sarif;
@@ -15,7 +15,7 @@
     </style>
     </head>
     <body>
-        <div class="container">
+        <div class="container1">
         <div>
              <a href="/">Home</a>
         </div>
