--- a/ui/Hobby.html
+++ b/ui/Hobby.html
@@ -3,16 +3,7 @@
     <title>
         HOBBY
     </title>
-    <style>
-        .container1{
-                   max-width: 800px;
-                    margin: 0 auto;
-                    font-family: sans-sarif;
-                    padding-top: 60px;
-                    padding-right: 150px;
-                    padding-left: 50px;
-              }  
-    </style>
+ <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container1">
