--- a/ui/Rules-in-life.html
+++ b/ui/Rules-in-life.html
@@ -3,16 +3,7 @@
         <title>
             RULES
         </title>
-        <style>
-            .container2{
-                   max-width: 800px;
-                    margin: 0 auto;
-                    font-family: sans-sarif;
-                    padding-top: 60px;
-                    padding-right: 150px;
-                    padding-left: 60px;
-              }  
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container2">
