[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -3,16 +3,7 @@
         <title>
             NAME
             </title>
-            <style>
-              .container{
-                   max-width: 800px;
-                    margin: 0 auto;
-                    font-family: sans-sarif;
-                    padding-top: 60px;
-                    padding-right: 150px;
-                    padding-left: 20px;
-              }  
-            </style>
+               <link href="/ui/style.css" rel="stylesheet" />
         </head>
         <body>
     <div class="container">
