[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Farhan,and this is my first webapp.
         </div>
+        <script>
+            alert('Do you want me to remember the password')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
