[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,29 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class "container">
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src=https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/14068294_1768369786777868_914368938473875644_n.jpg?oh=3eb2a587e2174a71df581be0ca692f79&oe=589BE869 class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div class="center text-big bold">
-            Hi! I am Farhan,and this is my first webapp.
+        <h3>
+            Personal
+            </h3>
+        <div>
+            Hi!My name is Farhan and this is my first webapp
+        </div>
+        <hr/>
+        <h3>
+            Professional
+        </h3>
+        <div>
+            I study in SRM University.
+        </div>
+        <hr/>
+        <div class="footer">
+            
+        </div>
         </div>
         <script>
             alert('Do you want me to remember the password')
