--- a/ui/index.html
+++ b/ui/index.html
@@ -4,9 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class "container">
-        <div class="left">
-            <img id='madi' src=https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/14068294_1768369786777868_914368938473875644_n.jpg?oh=3eb2a587e2174a71df581be0ca692f79&oe=589BE869 class="img-medium"/>
+        <div class="container">
+        <div class="center">
+            <img id='madi' src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/14068294_1768369786777868_914368938473875644_n.jpg?" class="img-medium"/>
         </div>
         <hr/>
         <br>
