--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id='madi' src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/14068294_1768369786777868_914368938473875644_n.jpg?" class="img-medium"/>
+            <img id='madi' src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/14068294_1768369786777868_914368938473875644_n.jpg?oh=3eb2a587e2174a71df581be0ca692f79&oe=589BE869" class="img-medium"/>
         </div>
         <hr/>
         <br>
