[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -7,6 +7,9 @@
         </head>
         <body>
     <div class="container">
+        <div class='centre'>
+          ellipse(200,200,300,300)  
+        </div>
                <div>
                 <a href="/">Home</a>
                 </div>
