[imad-console] Updates ui/Personal-Information.html

--- a/ui/Personal-Information.html
+++ b/ui/Personal-Information.html
@@ -8,7 +8,7 @@
         <body>
     <div class="container">
         <div class='centre'>
-            
+            <img id='madi' src="https://www.google.co.in/imgres?imgurl=http%3A%2F%2Fwww.traveltopakistan.co.uk%2Fwp-content%2Fuploads%2F2015%2F01%2Fmens-fashion.jpg&imgrefurl=http%3A%2F%2Fwww.traveltopakistan.co.uk%2Fmen-trends-in-pakistan%2F&docid=rxW9-y0ztCGK_M&tbnid=Xmb74kbfY-CBuM%3A&vet=1&w=640&h=480&bih=672&biw=1366&ved=0ahUKEwj_l-z90pTQAhVCMI8KHQTKDa44yAEQMwgbKBgwGA&iact=mrc&uact=8" class="img-medium"/>
         </div>
                <div>
                 <a href="/">Home</a>
